<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ingredient_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/ingredient_image_desc"
        android:orientation="horizontal"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ingredient_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ingredient_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:padding="8dp"
            android:text="@string/ingredient_price_example"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>